fixed white space problem for index page

--- a/index.css
+++ b/index.css
@@ -83,6 +83,7 @@ main {
     background-color: #F5F5F5;
     color: #303030;
     padding: 2vh 2vw;
+    height: 100vh;
 }
 
 #home-title {
@@ -155,7 +156,7 @@ footer a:hover {
         display: flex;
         flex-direction: column;
         width:100%;
-        height: 100%;
+        height: 100vh;
     }
 
     #home-page {
